--- a/app/src/main/res/layout/listview_prod_view.xml
+++ b/app/src/main/res/layout/listview_prod_view.xml
@@ -1,62 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ripple"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    app:mrl_rippleColor="#ff0000"
     android:layout_height="match_parent">
+    <RelativeLayout
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/prod_img"
-        android:src="@mipmap/default_image"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/prod_img"
+            android:src="@mipmap/default_image"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Nama Produk :"
-        android:id="@+id/prod_name"
-        android:layout_below="@+id/prod_img"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:singleLine="false" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Nama Produk :"
+            android:id="@+id/prod_name"
+            android:layout_below="@+id/prod_img"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:singleLine="false" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Nama Toko"
-        android:id="@+id/prod_shop_name"
-        android:layout_below="@+id/prod_name"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#F7F6F6"
-        android:layout_below="@+id/prod_shop_name"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/separator_view" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Nama Toko"
+            android:id="@+id/prod_shop_name"
+            android:layout_below="@+id/prod_name"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#F7F6F6"
+            android:layout_below="@+id/prod_shop_name"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:id="@+id/separator_view" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Harga Produk"
-        android:id="@+id/prod_price"
-        android:layout_below="@+id/separator_view"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/bought_review_view"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Harga Produk"
+            android:id="@+id/prod_price"
+            android:layout_below="@+id/separator_view"
+            android:layout_alignParentStart="true"
+            android:layout_toLeftOf="@+id/bought_review_view"/>
 
-    <TextView
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="x Diskusi y Ulasan"
-        android:id="@+id/bought_review_view"
-        android:singleLine="true"
-        android:layout_alignTop="@+id/prod_price"
-        android:layout_alignParentEnd="true" />
-</RelativeLayout>
+        <TextView
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="x Diskusi y Ulasan"
+            android:id="@+id/bought_review_view"
+            android:singleLine="true"
+            android:layout_alignTop="@+id/prod_price"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
+</com.balysv.materialripple.MaterialRippleLayout>
