1. fix things up

--- a/app/src/main/res/layout/listview_prod_view.xml
+++ b/app/src/main/res/layout/listview_prod_view.xml
@@ -21,8 +21,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Nama Produk :"
             android:id="@+id/prod_name"
+            android:text="@string/prod_name"
             android:layout_below="@+id/prod_img"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Nama Toko"
+            android:text="@string/prod_shop_name"
             android:id="@+id/prod_shop_name"
             android:layout_below="@+id/prod_name"
             android:layout_alignParentStart="true"
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Harga Produk"
+            android:text="@string/prod_price"
             android:id="@+id/prod_price"
             android:layout_below="@+id/separator_view"
             android:layout_alignParentStart="true"
@@ -60,7 +60,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="x Diskusi y Ulasan"
+            android:text="@string/bought_review_view"
             android:id="@+id/bought_review_view"
             android:singleLine="true"
             android:layout_alignTop="@+id/prod_price"
